Modificacion de Acerca de

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <img src="img/Ilucionita/DSCN0073.jpg" alt="Image" class="img-fluid"  id="mainImage1">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2 id="paragraph1">Ilucionista</h2>
-                        <a href="photo-details.html?set=1">Ver más</a>
+                        <a href="photo-details.html?set=1" id="pages1">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="container">
@@ -101,7 +101,7 @@
                     <img src="img/xv/DSCN0004.jpg" alt="Image" class="img-fluid" id="mainImage2">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2 id="paragraph2">XV</h2>
-                        <a href="photo-details.html?set=2">Ver más</a>
+                        <a href="photo-details.html?set=2" id="pages2">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="container">
@@ -126,7 +126,7 @@
                     <img src="img/mike/DSCN0142.jpg" alt="Image" class="img-fluid" id="mainImage3">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2 id="paragraph3">Boy</h2>
-                        <a href="photo-details.html?set=3">Ver más</a>
+                        <a href="photo-details.html?set=3" id="pages3">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="container">
@@ -151,7 +151,7 @@
                     <img src="img/Fer/DSCN0182.jpg" alt="Image" class="img-fluid" id="mainImage4">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2 id="paragraph4">Girl</h2>
-                        <a href="photo-details.html?set=4">Ver más</a>
+                        <a href="photo-details.html?set=4" id="pages4">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="container">
@@ -176,7 +176,7 @@
                     <img src="img/Jen/DSCN9699.jpg" alt="Image" class="img-fluid" id="mainImage5">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2 id="paragraph5">Girl</h2>
-                        <a href="photo-details.html?set=5">Ver más</a>
+                        <a href="photo-details.html?set=5" id="pages5">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="container">
@@ -201,7 +201,7 @@
                     <img src="img/amigos/DSCN0412.jpg" alt="Image" class="img-fluid" id="mainImage6">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2 id="paragraph6">Friends</h2>
-                        <a href="photo-details.html?set=6">Ver más</a>
+                        <a href="photo-details.html?set=6" id="pages6">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="container">
@@ -226,7 +226,7 @@
                     <img src="img/try/DSCN0299.jpg" alt="Image" class="img-fluid" id="mainImage7">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2 id="paragraph7">Boy</h2>
-                        <a href="photo-details.html?set=7">Ver más</a>
+                        <a href="photo-details.html?set=7" id="pages7">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="container">
@@ -251,7 +251,7 @@
                     <img src="img/soni/DSCN0191.jpg" alt="Image" class="img-fluid" id="mainImage8">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2 id="paragraph8">Bailarina</h2>
-                        <a href="photo-details.html?set=8">Ver más</a>
+                        <a href="photo-details.html?set=8" id="pages8">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="container">
@@ -276,7 +276,7 @@
                     <img src="img/amigos_2/DSCN0251.jpg" alt="Image" class="img-fluid" id="mainImage9">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2 id="paragraph9">Boy</h2>
-                        <a href="photo-details.html?set=9">Ver más</a>
+                        <a href="photo-details.html?set=9" id="pages9">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="container">
@@ -300,7 +300,7 @@
                     <img src="img/amigos_2/DSCN0278.jpg" alt="Image" class="img-fluid" id="mainImage10">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2 id="paragraph10">Boy</h2>
-                        <a href="photo-details.html?set=10">Ver más</a>
+                        <a href="photo-details.html?set=10" id="pages10">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="container">
@@ -324,7 +324,7 @@
                     <img src="img/yacke/DSCN9800.jpg" alt="Image" class="img-fluid" id="mainImage11">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2 id="paragraph11">Girl</h2>
-                        <a href="photo-details.html?set=11">Ver más</a>
+                        <a href="photo-details.html?set=11" id="pages11">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="container">
@@ -348,7 +348,7 @@
                     <img src="img/ivett/DSCN97055.jpg" alt="Image" class="img-fluid" id="mainImage12">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2 id="paragraph12">Girl</h2>
-                        <a href="photo-details.html?set=12">Ver más</a>
+                        <a href="photo-details.html?set=12" id="pages12">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="container">
@@ -372,7 +372,7 @@
                     <img src="img/alan/DSCN9723.jpg" alt="Image" class="img-fluid" id="mainImage13">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2 id="paragraph13">Boy</h2>
-                        <a href="photo-details.html?set=13">Ver más</a>
+                        <a href="photo-details.html?set=13" id="pages13">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="container">
@@ -396,7 +396,7 @@
                     <img src="img/amigos_3/DSCN01655.jpg" alt="Image" class="img-fluid" id="mainImage14">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2 id="paragraph14">Boy</h2>
-                        <a href="photo-details.html?set=14">Ver más</a>
+                        <a href="photo-details.html?set=14" id="pages14">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="container">
@@ -420,7 +420,7 @@
                     <img src="img/amigos_3/DSCN01811.jpg" alt="Image" class="img-fluid" id="mainImage15">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2 id="paragraph15">Girl</h2>
-                        <a href="photo-details.html?set=15">Ver más</a>
+                        <a href="photo-details.html?set=15" id="pages15">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="container">
@@ -444,7 +444,7 @@
                     <img src="img/dyf/DSCN9717.jpg" alt="Image" class="img-fluid" id="mainImage16">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2 id="paragraph16">Parejas</h2>
-                        <a href="photo-details.html?set=16">Ver más</a>
+                        <a href="photo-details.html?set=16" id="pages16">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="container">
