--- a/videos.html
+++ b/videos.html
@@ -14,14 +14,6 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.9.1/font/bootstrap-icons.min.css" rel="stylesheet">
 
-
-    <!--
-    
-TemplateMo 556 Catalog-Z
-
-https://templatemo.com/tm-556-catalog-z
-
--->
 </head>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
@@ -90,7 +82,7 @@ https://templatemo.com/tm-556-catalog-z
                     <img src="img/videos/video1.png" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>Video</h2>
-                        <a href="video-detail.html?vid=1">Ver más</a>
+                        <a href="video-detail.html?vid=1 " id="video1">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -103,7 +95,7 @@ https://templatemo.com/tm-556-catalog-z
                     <img src="img/videos/video2.png" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>Video</h2>
-                        <a href="video-detail.html?vid=2">Ver más</a>
+                        <a href="video-detail.html?vid=2" id="video2">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -116,7 +108,7 @@ https://templatemo.com/tm-556-catalog-z
                     <img src="img/videos/video3.png" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>Video</h2>
-                        <a href="video-detail.html?vid=3">Ver más</a>
+                        <a href="video-detail.html?vid=3" id="video3">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -129,7 +121,7 @@ https://templatemo.com/tm-556-catalog-z
                     <img src="img/videos/video4.png" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>Video</h2>
-                        <a href="video-detail.html?vid=4">Ver más</a>
+                        <a href="video-detail.html?vid=4" id="video4">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -142,7 +134,7 @@ https://templatemo.com/tm-556-catalog-z
                     <img src="img/videos/video5.png" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>Video</h2>
-                        <a href="video-detail.html?vid=5">Ver más</a>
+                        <a href="video-detail.html?vid=5" id="video5">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -155,7 +147,7 @@ https://templatemo.com/tm-556-catalog-z
                     <img src="img/videos/video6.png" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>Video</h2>
-                        <a href="video-detail.html?vid=6">Ver más</a>
+                        <a href="video-detail.html?vid=6" id="video6">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -168,7 +160,7 @@ https://templatemo.com/tm-556-catalog-z
                     <img src="img/videos/video7.png" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>Video</h2>
-                        <a href="video-detail.html?vid=7">Ver más</a>
+                        <a href="video-detail.html?vid=7" id="video7">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -181,7 +173,7 @@ https://templatemo.com/tm-556-catalog-z
                     <img src="img/videos/video8.png" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>Video</h2>
-                        <a href="video-detail.html?vid=8">Ver más</a>
+                        <a href="video-detail.html?vid=8" id="video8">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -194,7 +186,7 @@ https://templatemo.com/tm-556-catalog-z
                     <img src="img/logo-creative.png" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>Video</h2>
-                        <a href="video-detail.html?vid=9">Ver más</a>
+                        <a href="video-detail.html?vid=9" id="video9">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -207,7 +199,7 @@ https://templatemo.com/tm-556-catalog-z
                     <img src="img/logo-creative.png" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>Video</h2>
-                        <a href="video-detail.html?vid=10">Ver más</a>
+                        <a href="video-detail.html?vid=10" id="video10">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -220,7 +212,7 @@ https://templatemo.com/tm-556-catalog-z
                     <img src="img/logo-creative.png" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>Video</h2>
-                        <a href="video-detail.html?vid=1">Ver más</a>
+                        <a href="video-detail.html?vid=1" id="video11">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -233,7 +225,7 @@ https://templatemo.com/tm-556-catalog-z
                     <img src="img/logo-creative.png" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>Video</h2>
-                        <a href="video-detail.html?vid=1">Ver más</a>
+                        <a href="video-detail.html?vid=1" id="video12">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -246,7 +238,7 @@ https://templatemo.com/tm-556-catalog-z
                     <img src="img/logo-creative.png" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>Video</h2>
-                        <a href="video-detail.html?vid=1">Ver más</a>
+                        <a href="video-detail.html?vid=1" id="video13">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -259,7 +251,7 @@ https://templatemo.com/tm-556-catalog-z
                     <img src="img/logo-creative.png" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>Video</h2>
-                        <a href="video-detail.html?vid=1">Ver más</a>
+                        <a href="video-detail.html?vid=1" id="video14">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -272,7 +264,7 @@ https://templatemo.com/tm-556-catalog-z
                     <img src="img/logo-creative.png" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>Video</h2>
-                        <a href="video-detail.html?vid=1">Ver más</a>
+                        <a href="video-detail.html?vid=1" id="video15">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -285,7 +277,7 @@ https://templatemo.com/tm-556-catalog-z
                     <img src="img/logo-creative.png" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>Video</h2>
-                        <a href="video-detail.html?vid=1">Ver más</a>
+                        <a href="video-detail.html?vid=1" id="video16">Ver más</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
