--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
         <div class="row tm-mb-50">
             <div class="row mb-4">
                 <h2 class="col-12 tm-text-primary">
-                    Sobre Nosotros
+                    Nuestros Servicios
                 </h2>
             </div>
             <div class="col-md-4 col-12">
