Modificacion de sugerencias

--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,8 @@
     <link rel="icon" href="img/lente.png" type="image/x-icon">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    
+
 
 </head>
 <body>
@@ -115,9 +117,9 @@
                 <div class="tm-address-col">
                     <h2 class="tm-text-primary mb-5">Nuestra Dirección</h2>
                     <p class="tm-mb-30">Nosotros nos desplazamos hasta donde tú estés para brindarte el mejor servicio fotográfico, asegurándonos de capturar tus momentos especiales en el lugar y momento que prefieras.</p>
-                    <p class="tm-mb-30">Te invitamos a contactarnos para conocer más sobre nuestros servicios y discutir cómo podemos ayudarte a capturar tus recuerdos más valiosos.</p>
+                    <p class="tm-mb-30">Estamos disponibles para responder cualquier pregunta que tengas sobre nuestros servicios fotográficos y para discutir cómo podemos crear momentos inolvidables juntos. Esperamos con entusiasmo tu contacto para empezar a planificar juntos.</p>
                     <address class="tm-text-gray tm-mb-50">
-                        Estamos abierto de Viernes a Domingo de 9:00 AM a 6:00 PM. ¡Esperamos verte pronto!
+                        Te invitamos a contactarnos para conocer más sobre nuestros servicios y discutir cómo podemos ayudarte a capturar tus recuerdos más valiosos.
                     </address>
                     <!-- <ul class="tm-contacts">
                         <li>
@@ -146,7 +148,7 @@
                 <!-- Map -->
                 <div class="mapouter mb-4">
                     <div class="gmap-canvas">
-                        <iframe width="100%" height="300" id="gmap-canvas"
+                        <iframe width="100%" height="500" id="gmap-canvas"
                             
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d17899.015060249574!2d-99.14741508539636!3d19.42085548162624!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85ce0026db097507%3A0x54061076265ee841!2sCiudad%20de%20M%C3%A9xico%2C%20CDMX!5e0!3m2!1ses-419!2smx!4v1720228742291!5m2!1ses-419!2smx" 
                             frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
@@ -155,6 +157,63 @@
             </div>
         </div>
         <div class="row tm-mb-74 tm-people-row">
+            <h2 class="tm-text-primary mb-5">Comentarios de clientes</h2>
+            <div class="col-lg-12 col-md-12 col-sm-12 mb-5">
+                <div id="commentCarousel" class="carousel slide" data-ride="carousel" data-interval="5000">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="tm-comment-box">
+                                <p class="tm-text-secondary mb-2">"El servicio fue excepcional y las fotos quedaron increíbles. ¡Definitivamente lo recomiendo!"</p>
+                                <span class="tm-comment-author">- Juan Pérez</span>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="tm-comment-box">
+                                <p class="tm-text-secondary mb-2">"Gran experiencia, muy profesional y las fotos quedaron hermosas. ¡Gracias!"</p>
+                                <span class="tm-comment-author">- María López</span>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="tm-comment-box">
+                                <p class="tm-text-secondary mb-2">"Excelente calidad y un trato muy amable. Sin duda, volveré a contratar sus servicios."</p>
+                                <span class="tm-comment-author">- Carlos Sánchez</span>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="tm-comment-box">
+                                <p class="tm-text-secondary mb-2">"El servicio fue excepcional y las fotos quedaron increíbles. ¡Definitivamente lo recomiendo!"</p>
+                                <span class="tm-comment-author">- Juan </span>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="tm-comment-box">
+                                <p class="tm-text-secondary mb-2">"Gran experiencia, muy profesional y las fotos quedaron hermosas. ¡Gracias!"</p>
+                                <span class="tm-comment-author">- María </span>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="tm-comment-box">
+                                <p class="tm-text-secondary mb-2">"Excelente calidad y un trato muy amable. Sin duda, volveré a contratar sus servicios."</p>
+                                <span class="tm-comment-author">- Carlos </span>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#commentCarousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only tm-paging-link">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#commentCarousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="false"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+                <!-- <ul class="tm-social mt-4 pl-0 mb-0">
+                    <li><a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                    <li><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                </ul> -->
+            </div>
+            <!--
             <h2 class="tm-text-primary mb-5">Equipo</h2>
             <div class="col-lg-3 col-md-6 col-sm-6 col-12 mb-5">
                 <img src="img/equipo_1.jpg" alt="Image" class="mb-4 img-fluid">
@@ -166,9 +225,9 @@
                 <ul class="tm-social pl-0 mb-0">
                     <li><a href="https://facebook.com/Osvagames20/"><i class="fab fa-facebook"></i></a></li>
                     <li><a href="https://instagram.com/osvatech/"><i class="fab fa-instagram"></i></a></li>
-                    <!-- <li><a href="https://linkedin.com"><i class="fab fa-linkedin"></i></a></li> -->
+                    <li><a href="https://linkedin.com"><i class="fab fa-linkedin"></i></a></li> 
                 </ul>
-            </div>
+            </div>-->
             <!-- <div class="col-lg-3 col-md-6 col-sm-6 col-12 mb-5">
                 <img src="img/people-2.jpg" alt="Image" class="mb-4 img-fluid">
                 <h2 class="tm-text-primary mb-4">Catherine Pinky</h2>
@@ -222,7 +281,7 @@
                     <h3 class="tm-text-primary mb-4 tm-footer-title">Contacto</h3>
                     <p>Email: osvaldoyts20@gmail.com</p>
                     <p>Teléfono: +56 3653 2966</p>
-                    <p>Dirección: cuauhtémoc, CDMX, México</p>
+                    <p>Dirección: Cuauhtémoc, CDMX, México</p>
                 </div>
                 <div class="col-lg-2 col-md-6 col-sm-12 mb-5">
                     <h3 class="tm-text-primary mb-4 tm-footer-title">Nuestros Enlaces</h3>
@@ -268,6 +327,17 @@
         $(window).on("load", function() {
             $('body').addClass('loaded');
         });
+    </script>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+    $(document).ready(function() {
+    $('#commentCarousel').carousel({
+        interval: 4000 // Cambiar cada 5 segundos
+    });
+    });
     </script>
 </body>
 </html>
