--- a/videos.html
+++ b/videos.html
@@ -70,11 +70,11 @@
             <h2 class="col-6 tm-text-primary">
                 Últimos Videos
             </h2>
-            <div class="col-6 d-flex justify-content-end align-items-center">
+            <!-- <div class="col-6 d-flex justify-content-end align-items-center">
                 <form action="" class="tm-text-primary">
                     Pág <input type="text" value="1" size="1" class="tm-input-paging tm-text-primary"> of 1
                 </form>
-            </div>
+            </div> -->
         </div>
         <div class="row tm-mb-90 tm-gallery">
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
@@ -315,7 +315,7 @@
                     <h3 class="tm-text-primary mb-4 tm-footer-title">Contacto</h3>
                     <p>Email: osvaldoyts20@gmail.com</p>
                     <p>Teléfono: +56 3653 2966</p>
-                    <p>Dirección: cuauhtémoc, CDMX, México</p>
+                    <p>Dirección: Cuauhtémoc, CDMX, México</p>
                 </div>
                 <div class="col-lg-2 col-md-6 col-sm-12 mb-5">
                     <h3 class="tm-text-primary mb-4 tm-footer-title">Nuestros Enlaces</h3>
