--- a/about.html
+++ b/about.html
@@ -63,10 +63,10 @@
                 <div class="tm-about-img-text">
                     <p class="mb-4">
                     <!-- You may support TemplateMo website by making <a href="https://paypal.me/templatemo" target="_parent" rel="sponsored">a small contribution</a> via PayPal. This will be helpful for us. We hope you like this Catalog-Z photo / video template for your website. We are making new templates regularly for you. Please come back and visit our <a rel="sponsored" href="https://templatemo.com" target="_parent">TemplateMo website</a> again. --> 
-                    Somos un estudio de fotografía que apenas estamos comenzando, pero estamos comprometidos con la mejora continua y la satisfacción de nuestros clientes. Nos apasiona capturar momentos especiales y transformarlos en recuerdos duraderos. Creemos en la innovación constante y en la atención personalizada para cada proyecto.
+                    Somos un estudio de fotografía que se compromete con la mejora continua y la satisfacción de nuestros clientes. Nos apasiona capturar momentos especiales y transformarlos en recuerdos duraderos. Creemos en la innovación constante y en la atención personalizada para cada proyecto.
                     </p> 
                     <p>
-                        Síguenos en nuestras redes sociales para ver nuestro trabajo y apoyarnos a seguir creciendo. Estamos en Instagram, Facebook y Twitter, donde compartimos nuestras últimas sesiones y proyectos. ¡Tu apoyo y seguimiento son muy importantes para nosotros!
+                        Síguenos en nuestras redes sociales para ver nuestro trabajo y apoyarnos a seguir creciendo. Estamos en Instagram, Facebook y Youtube, donde compartimos nuestras últimas sesiones y proyectos. ¡Tu apoyo y seguimiento son muy importantes para nosotros!
                     </p>
                     <p>
                         <!-- Credits go to Pexels and Unsplash for photos and video used in this template. Catalog-Z is free <a rel="sponsored" href="https://v5.getbootstrap.com/">Bootstrap 5</a> Alpha 2 HTML Template designed for video and photo websites. -->
@@ -74,7 +74,7 @@
                     </p> 
                     <p>
                         <!-- You are <b>allowed</b> to use this template for your commercial or non-commercial websites. You can integrate it with any kind of CMS website. You are <b>NOT allowed</b> to redistribute the downloadable template ZIP file on any template collection website. Please <a rel="nofollow" href="https://templatemo.com/contact" target="_parent">contact us</a> for more information. Thank you. -->
-                        Nos comprometemos a brindar servicios de alta calidad con un enfoque profesional y creativo. Utilizamos equipos de última generación y técnicas innovadoras para asegurar que cada foto sea una obra de arte. Estamos aquí para ayudarte a inmortalizar tus momentos más preciados.
+                        Nos comprometemos a brindar servicios de calidad con un enfoque profesional y creativo. Utilizamos equipos y técnicas innovadoras para asegurar que cada foto sea una obra de arte. Estamos aquí para ayudarte a inmortalizar tus momentos más preciados.
                     </p>
                     
                 </div>                
@@ -134,7 +134,7 @@
                         <img src="img/rest_2.jpg"alt="Fotografía Comercial" class="tm-service-icon small-image">
                     </div>                
                     <h2 class="tm-text-primary mb-4">Fotografía Comercial</h2>
-                    <p class="tm-mb-50">Especializados en productos, moda y gastronomía, trabajamos con empresas para crear imágenes impactantes que potencian su marca. Desde la conceptualización hasta la postproducción, nos aseguramos de que cada fotografía transmita profesionalismo y atractivo visual, ayudando a destacar en un mercado competitivo.</p>                
+                    <p class="tm-mb-50">Empezando en productos, moda y gastronomía para empresar a crear imágenes impactantes que potencian su marca. Desde la conceptualización hasta la postproducción, nos aseguramos de que cada fotografía transmita profesionalismo y atractivo visual, ayudando a destacar en un mercado competitivo.</p>                
                     <div class="text-center">
                         <a href="https://instagram.com/mm12_photos/" class="btn btn-primary">Ver más</a>
                     </div>
@@ -165,7 +165,7 @@
                     <h3 class="tm-text-primary mb-4 tm-footer-title">Contacto</h3>
                     <p>Email: osvaldoyts20@gmail.com</p>
                     <p>Teléfono: +56 3653 2966</p>
-                    <p>Dirección: cuauhtémoc, CDMX, México</p>
+                    <p>Dirección: Cuauhtémoc, CDMX, México</p>
                 </div>
                 <div class="col-lg-2 col-md-6 col-sm-12 mb-5">
                     <h3 class="tm-text-primary mb-4 tm-footer-title">Nuestros Enlaces</h3>
