--- a/photo-details.html
+++ b/photo-details.html
@@ -286,7 +286,7 @@
                     <h3 class="tm-text-primary mb-4 tm-footer-title">Contacto</h3>
                     <p>Email: osvaldoyts20@gmail.com</p>
                     <p>Teléfono: +56 3653 2966</p>
-                    <p>Dirección: cuauhtémoc, CDMX, México</p>
+                    <p>Dirección: Cuauhtémoc, CDMX, México</p>
                 </div>
                 <div class="col-lg-2 col-md-6 col-sm-12 mb-5">
                     <h3 class="tm-text-primary mb-4 tm-footer-title">Nuestros Enlaces</h3>
