--- a/video-detail.html
+++ b/video-detail.html
@@ -117,6 +117,7 @@
                 </div>
             </div>
         </div>
+        <!-- 
         <div class="row mb-4">
             <h2 class="col-12 tm-text-primary">
                 Reels TikTok
@@ -227,7 +228,7 @@
                     <span>11,300 views</span>
                 </div>
             </div>        
-        </div> <!-- row -->
+        </div> -->
     </div> <!-- container-fluid, tm-container-content -->
 
     <footer class="tm-bg-gray pt-5 pb-3 tm-text-gray tm-footer">
@@ -241,7 +242,7 @@
                     <h3 class="tm-text-primary mb-4 tm-footer-title">Contacto</h3>
                     <p>Email: osvaldoyts20@gmail.com</p>
                     <p>Teléfono: +56 3653 2966</p>
-                    <p>Dirección: cuauhtémoc, CDMX, México</p>
+                    <p>Dirección: Cuauhtémoc, CDMX, México</p>
                 </div>
                 <div class="col-lg-2 col-md-6 col-sm-12 mb-5">
                     <h3 class="tm-text-primary mb-4 tm-footer-title">Nuestros Enlaces</h3>
