Modificacion de correo

--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
             <div class="tm-contact-info">
                 <!-- <p>Para cualquier consulta, envíanos un correo a <a href="mailto:tuemail@dominio.com">osvaldoyts20@gmail.com</a>.</p> -->
                 <p>Para cualquier consulta, envíanos un correo a </p>
-                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=osvaldoyts20@gmail.com" target="_blank" class="btn btn-warning">
+                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=osvaldoyts20@gmail.com&su=Consulta%20de%20servicio" target="_blank" class="btn btn-warning">
                         <i class="fas fa-external-link-alt"></i> Correo Electrónico
                     </a>
             </div>
